k8s/helm/nextcloud-helm.yaml
---
# Source: nextcloud/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-6.5.0
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/component: app
---
# Source: nextcloud/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-6.5.0
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: nextcloud
      app.kubernetes.io/instance: nextcloud
      app.kubernetes.io/component: app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: nextcloud
        app.kubernetes.io/instance: nextcloud
        app.kubernetes.io/component: app
      annotations:
        nextcloud-config-hash: a6dd1f8babcbf19c6787abd8cf8f26abdbdd81f3cc0a37be00c6e300adc5b471
        php-config-hash: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
        hooks-hash: 9525c2748a6c7cd0e28ec740623d0b3fa5a75c83b51ccfd136bc89c76737b204
    spec:
      containers:
        - name: nextcloud
          image: nextcloud:30.0.4-apache
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /status.php
              port:  80
              httpHeaders:
              - name: Host
                value: "nextcloud.walnuts.dev"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /status.php
              port:  80
              httpHeaders:
              - name: Host
                value: "nextcloud.walnuts.dev"
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /status.php
              port:  80
              httpHeaders:
              - name: Host
                value: "nextcloud.walnuts.dev"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 30
          resources:
            limits:
              memory: 4096Mi
            requests:
              memory: 256Mi
          volumeMounts:
            - name: nextcloud-main
              mountPath: /var/www/
              subPath: root
            - name: nextcloud-main
              mountPath: /var/www/html
              subPath: html
            - name: nextcloud-data
              mountPath: /var/www/html/data
              subPath: data
            - name: nextcloud-main
              mountPath: /var/www/html/config
              subPath: config
            - name: nextcloud-main
              mountPath: /var/www/html/custom_apps
              subPath: custom_apps
            - name: nextcloud-main
              mountPath: /var/www/tmp
              subPath: tmp
            - name: nextcloud-main
              mountPath: /var/www/html/themes
              subPath: themes
            - name: nextcloud-config
              mountPath: /var/www/html/config/phone.config.php
              subPath: phone.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/redis.config.php
              subPath: redis.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/.htaccess
              subPath: .htaccess
            - name: nextcloud-config
              mountPath: /var/www/html/config/apache-pretty-urls.config.php
              subPath: apache-pretty-urls.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/apcu.config.php
              subPath: apcu.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/apps.config.php
              subPath: apps.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/autoconfig.php
              subPath: autoconfig.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/reverse-proxy.config.php
              subPath: reverse-proxy.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/s3.config.php
              subPath: s3.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/smtp.config.php
              subPath: smtp.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/swift.config.php
              subPath: swift.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/upgrade-disable-web.config.php
              subPath: upgrade-disable-web.config.php
            - mountPath: /mnt/data/share
              name: samba-data
        - name: nextcloud-cron
          image: nextcloud:30.0.4-apache
          imagePullPolicy: IfNotPresent
          command:
            - /cron.sh
          resources:
            {}
          volumeMounts:
            - name: nextcloud-main
              mountPath: /var/www/
              subPath: root
            - name: nextcloud-main
              mountPath: /var/www/html
              subPath: html
            - name: nextcloud-data
              mountPath: /var/www/html/data
              subPath: data
            - name: nextcloud-main
              mountPath: /var/www/html/config
              subPath: config
            - name: nextcloud-main
              mountPath: /var/www/html/custom_apps
              subPath: custom_apps
            - name: nextcloud-main
              mountPath: /var/www/tmp
              subPath: tmp
            - name: nextcloud-main
              mountPath: /var/www/html/themes
              subPath: themes
            - name: nextcloud-config
              mountPath: /var/www/html/config/phone.config.php
              subPath: phone.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/redis.config.php
              subPath: redis.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/.htaccess
              subPath: .htaccess
            - name: nextcloud-config
              mountPath: /var/www/html/config/apache-pretty-urls.config.php
              subPath: apache-pretty-urls.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/apcu.config.php
              subPath: apcu.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/apps.config.php
              subPath: apps.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/autoconfig.php
              subPath: autoconfig.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/reverse-proxy.config.php
              subPath: reverse-proxy.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/s3.config.php
              subPath: s3.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/smtp.config.php
              subPath: smtp.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/swift.config.php
              subPath: swift.config.php
            - name: nextcloud-config
              mountPath: /var/www/html/config/upgrade-disable-web.config.php
              subPath: upgrade-disable-web.config.php
            - mountPath: /mnt/data/share
              name: samba-data
      nodeSelector:
        kubernetes.io/hostname: cake
      volumes:
        - name: nextcloud-main
          persistentVolumeClaim:
            claimName: nextcloud
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data
        - name: nextcloud-config
          configMap:
            name: nextcloud-config
        - hostPath:
            path: /mnt/data/share
            type: Directory
          name: samba-data
      securityContext:
        fsGroup: 33
        fsGroupChangePolicy: OnRootMismatch
---
# Source: nextcloud/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-6.5.0
    app.kubernetes.io/instance: nextcloud
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: app
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 128G
spec:
  ingressClassName: nginx
  rules:
    - host: nextcloud.walnuts.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 8080
